--- a/README.adoc
+++ b/README.adoc
@@ -68,7 +68,7 @@ curl http://localhost:9080/openapi
 ```
 {: codeblock}
 
-A UI is also available for a more interactive view of the deployed APIs. To visit the UI, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number and click the **OK** button. You’re redirected to a URL similar to **`https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai`**, where **accountname** is your account name. Click the **interactive UI** link on the welcome page. This UI is built from the [Open Source Swagger UI](https://swagger.io/tools/swagger-ui), which renders the generated **/openapi** document into a very user friendly page.
+A UI is also available for a more interactive view of the deployed APIs. To visit the UI, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number and click the **OK** button. You’re redirected to a URL similar to ***https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai***, where **accountname** is your account name. Click the **interactive UI** link on the welcome page. This UI is built from the [Open Source Swagger UI](https://swagger.io/tools/swagger-ui), which renders the generated **/openapi** document into a very user friendly page.
 endif::[]
 
 [role='command']
@@ -108,7 +108,7 @@ curl http://localhost:9080/openapi
 ```
 {: codeblock}
 
-To visit the UI for a more interactive view of the APIs, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number and click the **OK** button. You’re redirected to the **`https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai`** URL. Click the **interactive UI** link on the welcome page. 
+To visit the UI for a more interactive view of the APIs, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number and click the **OK** button. You’re redirected to the ***https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai*** URL. Click the **interactive UI** link on the welcome page. 
 endif::[]
 
 === Augmenting the existing restfulWS annotations with OpenAPI annotations
