--- a/README.adoc
+++ b/README.adoc
@@ -378,7 +378,7 @@ openapi.yaml
 include::finish/src/main/webapp/META-INF/openapi.yaml[]
 ----
 
-This document is the same as your current OpenAPI document with extra APIs for the `/inventory/properties` endpoint. Since this document is complete, you can also add the [hotspot=Scan file=1]`mp.openapi.scan.disable` property and set it to `true` in the [hotspot file=1]`src/main/webapp/META-INF/microprofile-config.properties` file.
+This document is the same as your current OpenAPI document with extra APIs for the `/inventory/properties` endpoint. This document is complete so you can also add the [hotspot=Scan file=1]`mp.openapi.scan.disable` property and set it to `true` in the [hotspot file=1]`src/main/webapp/META-INF/microprofile-config.properties` file.
 
 [role="code_command hotspot file=1", subs="quotes"]
 ----
