--- a/README.adoc
+++ b/README.adoc
@@ -275,8 +275,7 @@ components:
 
 === Filtering the OpenAPI tree elements
 
-Filtering of certain elements and fields of the generated OpenAPI document can be done by using the
-`OASFilter` interface.
+Filtering of certain elements and fields of the generated OpenAPI document can be done by using the `OASFilter` interface.
 
 [role="code_command hotspot file=0", subs="quotes"]
 ----
@@ -465,8 +464,7 @@ Results :
 Tests run: 4, Failures: 0, Errors: 0, Skipped: 0
 ----
 
-The warning and error messages are expected and result from a request to a bad or an unknown hostname. 
-This request is made in the `testUnknownHost()` test from the `InventoryEndpointIT` integration test.
+The warning and error messages are expected and result from a request to a bad or an unknown hostname. This request is made in the `testUnknownHost()` test from the `InventoryEndpointIT` integration test.
 
 [role='command']
 include::{common-includes}/devmode-quit.adoc[]
