--- a/README.adoc
+++ b/README.adoc
@@ -62,7 +62,7 @@ endif::[]
 ifdef::cloud-hosted[]
 To open a new command-line session, select **Terminal** > **New Terminal** from the menu of the IDE.
 
-Next, run the following curl command to see the RESTful APIs of the `inventory` service:
+Next, run the following curl command to see the RESTful APIs of the ***inventory*** service:
 ```
 curl http://localhost:9080/openapi
 ```
