--- a/README.adoc
+++ b/README.adoc
@@ -63,12 +63,14 @@ ifdef::cloud-hosted[]
 To open a new command-line session, select **Terminal** > **New Terminal** from the menu of the IDE.
 
 Next, run the following curl command to see the RESTful APIs of the ***inventory*** service:
-```
+```bash
 curl http://localhost:9080/openapi
 ```
-{: codeblock}
 
-A UI is also available for a more interactive view of the deployed APIs. To visit the UI, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number and click the **OK** button. You’re redirected to a URL similar to ***https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai***, where **accountname** is your account name. Click the **interactive UI** link on the welcome page. This UI is built from the [Open Source Swagger UI](https://swagger.io/tools/swagger-ui), which renders the generated **/openapi** document into a very user friendly page.
+A UI is also available for a more interactive view of the deployed APIs. Click the following button to visit the UI by the ***/openapi/ui*** endpoint. 
+::startApplication{port="9080" display="internal" name="Launch Application" route="/openapi/ui"}
+
+Or, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number and click the **OK** button. You’re redirected to a URL similar to ***https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai***, where **accountname** is your account name. Click the **interactive UI** link on the welcome page. This UI is built from the [Open Source Swagger UI](https://swagger.io/tools/swagger-ui), which renders the generated **/openapi** document into a very user friendly page.
 endif::[]
 
 [role='command']
@@ -85,10 +87,9 @@ You can generate an OpenAPI document in various ways. First, because all restful
 Navigate to the `start` directory to begin.
 // cloud hosted instructions
 ifdef::cloud-hosted[]
-```
+```bash
 cd /home/project/guide-microprofile-openapi/start
 ```
-{: codeblock}
 endif::[]
 
 [role='command']
@@ -103,10 +104,9 @@ endif::[]
 
 ifdef::cloud-hosted[]
 Now, run the following curl command to see the generated OpenAPI tree:
-```
+```bash
 curl http://localhost:9080/openapi
 ```
-{: codeblock}
 
 To visit the UI for a more interactive view of the APIs, select **Launch Application** from the menu of the IDE, type in **9080** to specify the port number and click the **OK** button. You’re redirected to the ***https://accountname-9080.theiadocker-4.proxy.cognitiveclass.ai*** URL. Click the **interactive UI** link on the welcome page. 
 endif::[]
@@ -148,10 +148,9 @@ endif::[]
 
 ifdef::cloud-hosted[]
 Since the Open Liberty server was started in development mode at the beginning of the guide, your changes were automatically picked up. Run the following curl command to see the updated OpenAPI tree:
-```
+```bash
 curl http://localhost:9080/openapi
 ```
-{: codeblock}
 
 The two endpoints at which your restfulWS methods are served are now more meaningful:
 endif::[]
@@ -236,10 +235,9 @@ endif::[]
 
 ifdef::cloud-hosted[]
 Run the following curl command to see the updated OpenAPI tree:
-```
+```bash
 curl http://localhost:9080/openapi
 ```
-{: codeblock}
 endif::[]
 
 [source, YAML, role="no_copy"]
@@ -315,10 +313,9 @@ endif::[]
 
 ifdef::cloud-hosted[]
 Run the following curl command to see the updated OpenAPI tree:
-```
+```bash
 curl http://localhost:9080/openapi
 ```
-{: codeblock}
 endif::[]
 
 [source, yaml, role="no_copy"]
@@ -400,10 +397,9 @@ endif::[]
 
 ifdef::cloud-hosted[]
 Run the following curl command to see the updated OpenAPI tree:
-```
+```bash
 curl http://localhost:9080/openapi
 ```
-{: codeblock}
 endif::[]
 
 [source, yml, role="no_copy"]
@@ -436,7 +432,7 @@ endif::[]
 
 // cloud-hosted guide instructions:
 ifdef::cloud-hosted[]
-No automated tests are provided to verify the correctness of the generated OpenAPI document. Manually verify the document by visiting the **http://localhost:9080/openapi** or the **http://localhost:9080/openapi/ui** URL.
+No automated tests are provided to verify the correctness of the generated OpenAPI document. Manually verify the document by visiting the ***http://localhost:9080/openapi*** or the ***http://localhost:9080/openapi/ui*** URL.
 endif::[]
 
 A few tests are included for you to test the basic functionality of the `inventory` service. If a test failure occurs, then you might have introduced a bug into the code. These tests will run automatically as a part of the integration test suite.
