--- a/README.adoc
+++ b/README.adoc
@@ -464,7 +464,7 @@ Tests run: 4, Failures: 0, Errors: 0, Skipped: 0
 The warning and error messages are expected and result from a request to a bad or an unknown hostname. This request is made in the `testUnknownHost()` test from the `InventoryEndpointIT` integration test.
 
 [role='command']
-include::{common-includes}/devmode-quit.adoc[]
+include::{common-includes}/devmode-quit-ctrlc.adoc[]
 
 
 // =================================================================================================
